--- a/playground/index.html
+++ b/playground/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,25 +8,72 @@
     <meta name="description" content="PHP-WASM Playground - a simple in-browser editor for PHP using WebAssembly." />
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- CodeMirror Style & Theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/codemirror.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/theme/monokai.min.css">
 </head>
 <body>
-    <h1>PHP-WASM Playground</h1>
+    <div class="container-fluid p-3">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
+            <div class="container container-md">
+                <div class="d-flex align-items-center">
+                    <a class="navbar-brand me-3" href="#">PHP-WASM Playground</a>
+                    <button id="run" class="btn btn-success">&#9658; Run</button>
+                </div>
+            </div>
+        </nav>
 
-<textarea id="editor">
-&lt;?php
-// Display PHP version and loaded extensions
-echo 'PHP Version: ' . phpversion() . "\n";
-echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
-?&gt;
-</textarea>
+        <div id="editor-container" class="row gx-3">
+            <!-- Left Side (Editor) -->
+            <div id="left" class="col-6">
+                <div id="editor-wrapper" class="card h-100">
+                    <div id="editor-header" class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                        <span class="fw-bold">PHP Code</span>
+                        <div id="editor-header" class="d-flex align-items-center gap-2">
+                            <span id="php-name" class="text-white-50">PHP Version:</span>
+                            <span id="php-version" class="fw-bold">0.0.0</span>
+                        </div>
+                    </div>
+                    <div id="editor-body" class="card-body">
+                        <textarea id="editor" class="form-control" rows="15">
+    &lt;?php
+    // Display PHP version and loaded extensions
+    echo 'PHP Version: ' . phpversion() . "\n";
+    echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
+    ?&gt;
+                        </textarea>
+                    </div>
+                </div>
+            </div>
 
-    <button id="run">Run</button>
+            <!-- Right Side (Output) -->
+            <div id="right" class="col-6">
+                <div id="output-wrapper" class="card h-100">
+                    <div id="output-header" class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+                        <span class="fw-bold">Output</span>
+                        <div id="performance-wrapper" class="d-flex align-items-center gap-2">
+                            <span id="perf-name" class="text-white-50">Performance |</span>
+                            <span id="perf-data" class="fw-bold">20ms</span>
+                        </div>
+                    </div>
 
-    <pre id="output">Ready!</pre>
+                    <div id="output" class="card-body">
+                        <pre id="output" class="p-2">Ready!</pre>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
+
+    <!-- The CodeMirror -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/codemirror.min.js"></script>
+     <!-- The CodeMirror Modes -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/mode/php/php.min.js"></script>
+    <script src="assets/js/timer.js"></script>
     <script type="module" src="assets/js/playground.js"></script>
 </body>
 </html>
