move github link to footer [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -42,9 +42,6 @@
                     <li class="nav-item">
                         <a id="help-link" class="nav-link fs-4" href="https://github.com/jakoch/php-wasm-devbox/issues">Report Issues | Request Feature</a>
                     </li>
-                    <li class="nav-item">
-                        <span class="text-white-50">https://github.com/jakoch/php-wasm-devbox/</span>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -196,6 +193,7 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
     <!-- Footer -->
     <footer class="text-center text-white-50 py-3">
         <div>PHP-WASM Playground<br>(c) 2025 Jens A. Koch</div>
+        <a class="text-white-50" href="https://github.com/jakoch/php-wasm-devbox/">jakoch/php-wasm-devbox</a>
     </footer>
 
     <!-- CodeMirror Editor & Mode -->
