fix php version on build artifact

--- a/playground/index.html
+++ b/playground/index.html
@@ -40,7 +40,7 @@
                         <a id="help-link" class="nav-link fs-4" href="#">Help</a>
                     </li>
                     <li class="nav-item">
-                        <a id="help-link" class="nav-link fs-4" href="https://github.com/jakoch/php-wasm-devbox/issues">Report Issues | Request Feature</a>
+                        <a id="help-link" class="nav-link fs-4" href="https://github.com/jakoch/php-wasm-devbox/issues">Report Issues</a>
                     </li>
                 </ul>
             </div>
@@ -192,8 +192,11 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
 
     <!-- Footer -->
     <footer class="text-center text-white-50 py-3">
-        <div>PHP-WASM Playground<br>(c) 2025 Jens A. Koch</div>
-        <a class="text-white-50" href="https://github.com/jakoch/php-wasm-devbox/">jakoch/php-wasm-devbox</a>
+        <div>
+            PHP-WASM Playground v0.2.0<br>
+            <a class="text-white-50" href="https://github.com/jakoch/php-wasm-devbox/">jakoch/php-wasm-devbox</a><br>
+            (c) 2025 Jens A. Koch
+        </div>
     </footer>
 
     <!-- CodeMirror Editor & Mode -->
