--- a/playground/index.html
+++ b/playground/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -75,36 +75,36 @@
             </p>
             <h4><u>Interactions</u></h4>
             <div class="row">
-                <div class="col-2 fw-bold">Run Button</div>
+                <div class="col-3 fw-bold">Run Button</div>
                 <div class="col-9">Executes the PHP code using the PHP-WASM module and returns the output in the output panel.</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">Save Button</div>
-                <div class="col-9">Saves the PHP code to file.</div>
+                <div class="col-3 fw-bold">Save Button</div>
+                <div class="col-9">Saves the PHP code to file. The file name format is "index-YYYYMMDD-HHMM.php".</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">Reset Button</div>
+                <div class="col-3 fw-bold">Reset Button</div>
                 <div class="col-9">Resets the PHP code editor to a basic hello world example.</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">Editor Dropdown</div>
+                <div class="col-3 fw-bold">Editor Dropdown</div>
                 <div class="col-9">You can switch between CodeMirror and Monaco editors using the editor type selector.</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">PHP Version Dropdown</div>
+                <div class="col-3 fw-bold">PHP Version Dropdown</div>
                 <div class="col-9">You can switch the PHP Version using the PHP version selector.</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">Output Mode Toggle</div>
+                <div class="col-3 fw-bold">Output Mode Toggle</div>
                 <div class="col-9">You can toggle the output mode and select between raw text and HTML rendering.</div>
             </div>
             <h4><u>Status Displays</u></h4>
             <div class="row">
-                <div class="col-2 fw-bold">PHP Version Display</div>
+                <div class="col-3 fw-bold">PHP Version Display</div>
                 <div class="col-9">Shows the PHP version used for executing your PHP code.</div>
             </div>
             <div class="row">
-                <div class="col-2 fw-bold">Performance Display</div>
+                <div class="col-3 fw-bold">Performance Display</div>
                 <div class="col-9">Shows how long it took to run your PHP code.</div>
             </div>
         </div>
@@ -140,11 +140,6 @@
                             <option value="8.4.0">PHP 8.4.0</option>
                         </select>
                     </div>
-                    <!-- PHP Version Display -->
-                    <div id="php-version-display" class="d-flex align-items-center gap-2">
-                        <span id="php-name" class="text-white-50">PHP Version:</span>
-                        <span id="php-version" class="fw-bold">0.0.0</span>
-                    </div>
                 </div>
                 <div id="editor-body" class="card-body">
                     <!-- Editor -->
@@ -175,10 +170,17 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
                         <input class="form-check-input" type="checkbox" id="output-mode-switcher">
                         <label class="form-check-label" for="output-mode-switcher">Toggle Output Type (off: Raw | on: HTML)</label>
                     </div>
-                    <!-- Performance Display -->
-                    <div id="performance-display" class="d-flex align-items-center gap-2">
-                        <span id="perf-name" class="text-white-50">Performance:</span>
-                        <span id="perf-data" class="fw-bold">20ms</span>
+                    <div class="align-items-start flex-column">
+                        <!-- PHP Version Display -->
+                        <div id="php-version-display" class="align-items-right gap-2">
+                            <span id="php-name" class="text-white-50">PHP Version:</span>
+                            <span id="php-version" class="fw-bold">0.0.0</span>
+                        </div>
+                        <!-- Performance Display -->
+                        <div id="performance-display" class="align-items-right gap-2">
+                            <span id="perf-name" class="text-white-50">Performance:</span>
+                            <span id="perf-data" class="fw-bold">20ms</span>
+                        </div>
                     </div>
                 </div>
                 <div id="result-output" class="card-body">
@@ -193,9 +195,9 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
     <!-- Footer -->
     <footer class="text-center text-white-50 py-3">
         <div>
-            PHP-WASM Playground v0.2.0<br>
+            PHP-WASM Playground v0.3.0<br>
             <a class="text-white-50" href="https://github.com/jakoch/php-wasm-devbox/">jakoch/php-wasm-devbox</a><br>
-            (c) 2025 Jens A. Koch
+            Copyright (c) 2025 Jens A. Koch
         </div>
     </footer>
 
