implement php-example selection [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -135,13 +135,14 @@
                     </div>
                     <div class="d-flex gap-2">
                         <!-- PHP Examples Selector-->
-                        <select id="example-switcher" class="form-select form-select-sm" style="width: auto;">
-                            <option value="hello_world.php">Hello World</option>
-                            <option value="phpinfo.php">PHP Info</option>
-                            <option value="extensions.php">Show Loaded Extensions</option>
-                            <option value="json.php">JSON Example</option>
-                            <option value="stdout_stderr_return.php">Output Types</option>
+                        <select id="php-example-switcher" class="form-select form-select-sm" style="width: auto;">
+                            <option value="hello_world">Hello World</option>
+                            <option value="phpinfo">PHP Info</option>
+                            <option value="extensions">Show Loaded Extensions</option>
+                            <option value="json">JSON Example</option>
+                            <option value="stdout_stderr_return">Output Types</option>
                         </select>
+                        <button id="load-file-button" class="btn btn-secondary">📂 Load File</button>
                         <!-- Editor Selector -->
                         <select id="editor-switcher" class="form-select form-select-sm" style="width: auto;">
                             <option value="monaco">Monaco</option>
