--- a/playground/index.html
+++ b/playground/index.html
@@ -88,6 +88,10 @@
                 <div class="col-9">Saves the PHP code to file. The file name format is "index-YYYYMMDD-HHMM.php".</div>
             </div>
             <div class="row">
+                <div class="col-3 fw-bold">Copy Button</div>
+                <div class="col-9">Copies the content of the code editor to the clipboard.</div>
+            </div>
+            <div class="row">
                 <div class="col-3 fw-bold">Reset Button</div>
                 <div class="col-9">Resets the PHP code editor to a basic hello world example.</div>
             </div>
@@ -131,6 +135,7 @@
                         <button id="run-button" class="btn btn-success">
                             <i class="bi bi-filetype-php fs-4"></i> Run</button>
                         <button id="save-button" class="btn btn-secondary">🖫 Save</button>
+                        <button id="copy-button" class="btn btn-secondary">📋 Copy</button>
                         <button id="reset-button" class="btn btn-danger glyphicon glyphicon-stop">↺ Reset</button>
                     </div>
                     <div class="d-flex gap-2">
