--- a/playground/index.html
+++ b/playground/index.html
@@ -189,36 +189,57 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
 
         <!-- Right Side (Output) -->
         <div id="right" class="col-6">
-            <div id="output-wrapper" class="card bg-dark h-100">
-                <div id="output-header" class="card-header bg-success text-white d-flex justify-content-between align-items-center" style="height: 60px;">
-                    <!-- Panel Name -->
-                    <div class="d-flex align-items-center">
-                        <i class="bi bi-code-slash fs-3"></i>
-                        <span class="fw-bold fs-4 p-2">Output</span>
-                    </div>
-                    <!-- Toggle Output Type: raw text or HTML -->
-                    <div class="form-check form-switch text-white ms-3">
-                        <input class="form-check-input" type="checkbox" id="output-mode-switcher">
-                        <label class="form-check-label" for="output-mode-switcher">Toggle Output Type (off: Raw | on: HTML)</label>
-                    </div>
-                    <div class="align-items-start flex-column">
-                        <!-- PHP Version Display -->
-                        <div id="php-version-display" class="align-items-right gap-2">
-                            <span id="php-name" class="text-white-50">PHP Version:</span>
-                            <span id="php-version" class="fw-bold">0.0.0</span>
+            <div id="output-panels">
+
+                <div id="standard-output-card" class="card bg-dark h-100" style="min-height: 200px;">
+
+                    <div id="standard-output-header" class="card-header bg-success text-white d-flex justify-content-between align-items-center" style="height: 60px;">
+                        <!-- Panel Name -->
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-code-slash fs-3"></i>
+                            <span class="fw-bold fs-4 p-2">Output</span>
                         </div>
-                        <!-- Performance Display -->
-                        <div id="performance-display" class="align-items-right gap-2">
-                            <span id="perf-name" class="text-white-50">Performance:</span>
-                            <span id="perf-data" class="fw-bold">20ms</span>
+                        <!-- Toggle Output Type: raw text or HTML -->
+                        <div class="form-check form-switch text-white ms-3">
+                            <input class="form-check-input" type="checkbox" id="output-mode-switcher">
+                            <label class="form-check-label" for="output-mode-switcher">Toggle Output Type (off: Raw | on: HTML)</label>
+                        </div>
+                        <div class="align-items-start flex-column">
+                            <!-- PHP Version Display -->
+                            <div id="php-version-display" class="align-items-right gap-2">
+                                <span id="php-name" class="text-white-50">PHP Version:</span>
+                                <span id="php-version" class="fw-bold">0.0.0</span>
+                            </div>
+                            <!-- Performance Display -->
+                            <div id="performance-display" class="align-items-right gap-2">
+                                <span id="perf-name" class="text-white-50">Performance:</span>
+                                <span id="perf-data" class="fw-bold">20ms</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div id="result-output" class="card-body">
-                    <pre id="output" class="p-2 border border-dark rounded">Ready!</pre>
-                </div>
-            </div>
-        </div>
+                    <div id="standard-output-body" class="card-body">
+                        <pre id="standard-output" class="p-2 border border-dark rounded pre-direct text-white">Ready!</pre>
+                    </div>
+                </div> <!-- /#standard-output -->
+
+                <div class="m-2"></div>
+
+                <div id="standard-error-output-card" class="card bg-dark h-100" style="min-height: 200px;">
+                    <!-- Standard Error Output -->
+                    <div id="standard-error-output-header" class="card-header bg-secondary text-white d-flex justify-content-between align-items-center" style="height: 60px;">
+                        <!-- Panel Name -->
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-code-slash fs-3"></i>
+                            <span class="fw-bold fs-4 p-2">Errors</span>
+                        </div>
+                    </div>
+                    <div id="standard-error-output-body" class="card-body">
+                        <pre id="standard-error-output" class="p-2 border border-dark rounded pre-direct text-white">No Errors!</pre>
+                    </div>
+                </div> <!-- /#standard-error-output -->
+
+            </div> <!-- /#output-panels -->
+        </div> <!-- /#right -->
     </div> <!-- /#editor-container -->
 
     <!-- Footer -->
