automatically toggle content output mode to html for phpifno example, set raw for all others [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -5,7 +5,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHP-WASM Playground</title>
-    <meta name="description" content="PHP-WASM Playground - a simple in-browser editor for PHP using WebAssembly." />
+    <meta name="description" content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
+    <!--<meta property="og:url" content="https://..." />-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="PHP-WASM Playground" />
+    <meta property="og:description" content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
+    <meta property="og:site_name" content="PHP Playground" />
+    <!--<meta property="og:image" content="https://.../logo.png" />-->
+    <meta name=”twitter:card” content="summary_large_image" />
+    <meta name=”twitter:creator” content="@jens-andre-koch" />
+    <meta name=”twitter:title” content="PHP-WASM Playground" />
+    <meta name=”twitter:description” content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
+    <!--<meta name=”twitter:image” content="https://.../logo.png" />-->
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <!-- Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
