--- a/playground/index.html
+++ b/playground/index.html
@@ -48,20 +48,25 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow border-bottom border-dark">
         <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap">
             <a class="navbar-brand p-0 me-2 fs-4" href="/" aria-label="PHP-WASM Module Playground">PHP-WASM</a>
-            <div class="d-lg-none" style="width: 4.25rem;"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse flex-grow-1" id="bdNavbar">
                 <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-lg-0">
-                     <li class="nav-item">
-                        <a id="playground-link" class="nav-link fs-4" href="#">Playground</a>
+                    <li class="nav-item"></li>
+                        <a id="playground-link" class="nav-link fs-4 d-flex align-items-center" href="#">
+                            <i class="bi bi-filetype-php fs-3 me-2"></i>Playground
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a id="help-link" class="nav-link fs-4" href="#">Help</a>
+                        <a id="help-link" class="nav-link fs-4 d-flex align-items-center" href="#">
+                            <i class="bi bi-question-octagon fs-3 me-2"></i>Help
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a id="help-link" class="nav-link fs-4" href="https://github.com/jakoch/php-wasm-devbox/issues">Report Issues</a>
+                        <a id="help-link" class="nav-link fs-4 d-flex align-items-center" href="https://github.com/jakoch/php-wasm-devbox/issues">
+                            <i class="bi bi-github fs-3 me-2"></i>Report Issues
+                        </a>
                     </li>
                 </ul>
             </div>
