restructure readme in kanban style [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -68,6 +68,11 @@
                             <i class="bi bi-github fs-3 me-2"></i>Report Issues
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a id="help-link" class="nav-link fs-4 d-flex align-items-center" href="https://github.com/jakoch/php-wasm-devbox">
+                            <i class="bi bi-star fs-3 me-2"></i>Star on GitHub
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -87,6 +92,11 @@
             <h4>Welcome to the PHP-WASM Playground!</h4>
             <p>The PHP-WASM Playground is a simple in-browser editor using the PHP-WASM module. It is not a fully featured IDE.</p>
             <p>The PHP-WASM module is the PHP interpreter compiled to WebAssembly using Emscripten. It allows you to run PHP code directly in the browser.</p>
+            <h4>Who is this for?</h4>
+            <p>This app is for anyone that wants to run PHP snippets or inspect the inner workings of the PHP VM.</p>
+            <p>It has been designed with the idea of an in-browser testing ground for small snippets against multiple PHP versions in mind.</p>
+            <p>The inspiration is of course the well-known 3v4l.org playground project, where you can do the same but against hosted PHP versions.</p>
+            <p>Here everything runs in the browser, and once the web application is loaded, it will even work without internet connection.</p>
             <h4>Usage</h4>
             <p>Write your PHP code in the editor on the left and click the Run button to execute it. You will see the result in the output panel on the right.</p>
             <p>Keep in mind to start with the usual PHP opening tag: <code>&lt;?php</code></p>
