--- a/playground/index.html
+++ b/playground/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHP-WASM Playground</title>
     <meta name="description" content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
+    <!-- Open Graph -->
     <!--<meta property="og:url" content="https://..." />-->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="PHP-WASM Playground" />
     <meta property="og:description" content="PHP-WASM Playground is a simple in-browser editor for PHP using WebAssembly." />
     <meta property="og:site_name" content="PHP Playground" />
     <!--<meta property="og:image" content="https://.../logo.png" />-->
+    <!-- Twitter -->
     <meta name=”twitter:card” content="summary_large_image" />
     <meta name=”twitter:creator” content="@jens-andre-koch" />
     <meta name=”twitter:title” content="PHP-WASM Playground" />
@@ -173,6 +175,10 @@
                             <i class="bi bi-play-fill fs-4"></i>
                             <span class="fs-4 p-2">Run</span>
                         </button>
+                        <div class="form-check form-switch text-white ms-3">
+                            <input class="form-check-input" type="checkbox" id="run-continous">
+                            <label class="form-check-label" for="run-continous">Run Continous</label>
+                        </div>
                         <button id="save-button" class="btn btn-secondary">
                             <i class="bi bi-save fs-4"></i>
                             <span class="fs-4 p-2">Save</span>
@@ -192,6 +198,7 @@
                             <option value="hello_world">Hello World</option>
                             <option value="phpinfo">PHP Info</option>
                             <option value="extensions">Show Loaded Extensions</option>
+                            <option value="array_align">Array Align Example</option>
                             <option value="json">JSON Example</option>
                             <option value="stdout_stderr_return">Output Types</option>
                         </select>
