fix color of input element [skip ci]

--- a/playground/index.html
+++ b/playground/index.html
@@ -277,7 +277,7 @@ echo 'Loaded Modules: ' . implode(", ", get_loaded_extensions()) . "\n";
               </div>
               <!-- Toggle Output Type: raw text or HTML -->
               <div class="form-check form-switch text-white ms-3">
-                <input class="form-check-input" type="checkbox" id="output-mode-switcher">
+                <input class="form-check-input bg-secondary" type="checkbox" id="output-mode-switcher">
                 <label class="form-check-label" for="output-mode-switcher">Toggle Output Type (off: Raw | on:
                   HTML)</label>
               </div>
